--- a/js/cocktail-app/index.html
+++ b/js/cocktail-app/index.html
@@ -39,7 +39,19 @@
 </nav>
 
 <div class="container">
-    <div class="row" id="cocktails-app"></div>
+    <div class="row" id="cocktails-app">
+        <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+            <div class="spinner-grow" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="assets/js/script.js"></script>
