cocktail app day 3

--- a/js/cocktail-app/index.html
+++ b/js/cocktail-app/index.html
@@ -18,22 +18,19 @@
             <input id="cocktail-name-search" class="form-control me-2" type="search" placeholder="Cocktail name" aria-label="Search">
 
             <select id="category-select" class="form-select" aria-label="Default select example">
-                <option selected>Select category</option>
-                <option value="1">Vienas</option>
+                <option selected value="0">Select category</option>
             </select>
 
             <select id="glass-type-select" class="form-select" aria-label="Default select example">
-                <option selected>Select category</option>
-                <option value="1">Vienas</option>
+                <option selected value="0">Select glass</option>
             </select>
 
             <select id="ingredient-select" class="form-select" aria-label="Default select example">
-                <option selected>Select category</option>
-                <option value="1">Vienas</option>
+                <option selected value="0">Select ingredient</option>
             </select>
             
-            <button class="btn btn-outline-success" type="submit" id="search">Search</button>
-            <button class="btn btn-outline-success" type="submit" id="im-lucky">Feeling lucky</button>
+            <button class="btn btn-outline-dark" type="submit" id="search">Search</button>
+            <button class="btn btn-outline-dark" type="submit" id="im-lucky">Feeling lucky</button>
         </form>
     </div>
 </nav>
